--- a/CFFEhmk1.ipynb
+++ b/CFFEhmk1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNvsWIC46WU5vPViA5nI8tZ",
+      "authorship_tag": "ABX9TyPVD2L4IfhaLUj+oO2QBfAe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -419,6 +419,24 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#(a) Intercept = -0.0009 and slope coefficient = 0.6498\n",
+        "#(b) R-squared for the regression = 0.220 and adjusted R-squared = 0.217\n",
+        "#(c) Standard error of the estimated slope coefficient = 0.078\n",
+        "#(d) SLR.4 assumption in context (Wooldridge p.42) : The regression error has a mean of zero for any given SPY return.\n",
+        "#In other words, all other factors affecting PFE returns that are not included in SPY are uncorrelated with SPY.\n",
+        "#(e) Volatility of PFE vs. MRK based on beta : based on the beta alone, PFE is less volatile than MRK if MRK’s beta is higher than 0.65.\n",
+        "#(f) Expected returns under CAPM : Since PFE’s beta = 0.6498:\n",
+        "#If MRK’s beta > 0.6498, PFE would have lower expected return than MRK & If MRK’s beta < 0.6498, PFE would have higher expected return than MRK."
+      ],
+      "metadata": {
+        "id": "rS8eDxbDtmBJ"
+      },
+      "execution_count": 23,
+      "outputs": []
     }
   ]
 }
